added text to my-bio

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </object>
         <article class="my-bio">
             <h3>Biography</h3>
+            <p>This is where my bio will go eventually.</p>
         </article>
     </section>
 
