--- a/index.html
+++ b/index.html
@@ -41,47 +41,30 @@
             <h2>Developer, Book Worm, Tea-Lover</h2>
         </div>
     </section>
+    
     <section id="projects">
-        <object class="bg-stuff">
-            <img src="images/books.jpg" alt="books">
-        </object>
-        <article class="my-bio">
+          <div class="container">
+            <div class="bg-stuff">
+            <p></p>
+            </div>
+            <nav class="link">
+                <a href="indexsecond.html">Learn More</a>
+                    <div class="my-icons">
+                         <img src="images/noun-pc-5104766.png" alt="pc logo" class="logo">
+                        <img src="images/noun-tea-5450552.png" alt="tea logo" class="logo">
+                        <img src="images/noun-open-book-4873909.png" alt="book logo" class="logo">
+                    </div>
+            </nav>
+            <div class="socials">
+                <img src="images/icons8-linkedin-25.png" alt="linkedin logo" class="logo">
+                <img src="images/icons8-github-25.png" alt="github logo" class="logo">
+            </div>
+        </div>
+        <div class="my-bio">
             <h3>Biography</h3>
             <p>This is where my bio will go eventually.</p>
-        </article>
+        </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <section id="projec">
-        <article class="Websites and Coding">
-            <img src = "noun-pc-5104766.png" alt="" class="icon">
-            <h3></h3>
-            <p></p>
-            <a href="#" class="btn-secondary"></a>
-        </article>
-        <article class="Reading List">
-            <img src = "noun-open-book-4873909.png" alt="" class="icon">
-            <h3></h3>
-            <p></p>
-            <a href="#" class="btn-secondary"></a>
-        </article>
-        
-        <article class="Tea">
-            <img src = "noun-tea-5450552.png" alt="" class="">
-            <h3></h3>
-            <p></p>
-            <a href="#" class="btn-secondary"></a>
-        </article>
-    </section>
+    <footer>
+        <small>Website made with 💚 by <a href="linkedin">Julie</small>
+    </footer>
