background images updated stylesheet

--- a/indexsecond.html
+++ b/indexsecond.html
@@ -32,14 +32,9 @@
         </header>
         <section id="hero2">
             <div class="Coding">
+                <div class="langlogobg"></div>
                 <h2>My Coding Languages</h2>
                 <h3>Learned in She Codes Plus</h3> <br>
-               
-                <img src="images/icons8-html-5-48.png" alt="html">
-                <img src="images/icons8-css-48.png" alt="css">
-                <img src="images/icons8-python-48.png" alt="python">
-                <img src="images/icons8-django-48.png" alt="django">
-                <img src="images/icons8-react-40.png" alt="react">
              </div>
         </section>
 
