added bio and @media queries to several items

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
             </div>
         </div>
         <div class="my-bio">
-            <h3>Biography</h3>
-            <p>This is where my bio will go eventually.</p>
+            <h2>Biography</h2>
+            <p>Hello, I am Julie Powell. I grew up in the beautiful mountains of Colorado, USA.  I love to travel and read books. I have traveled to eleven countries, including India, Hong Kong, Ireland and Italy. My favorite reads are classical texts, philosophy and fantasy.
+        I have always loved to dive into a good mental challenge. I studied Classics/History/Politics in University, and Irish political history in grad school. 
+        Coding is an extension of this love. A complex challenge I can continue to delve into for years. Through She Codes I will be expanding my knowledge and ability, making my journey through life more deep and complex. Journey before destination. </p>
         </div>
     </section>
     <footer>
