--- a/indexsecond.html
+++ b/indexsecond.html
@@ -34,15 +34,19 @@
             <div class="Coding">
                 <div class="langlogobg"></div>
                 <h2>My Coding Languages</h2>
-                <h3>Learned in She Codes Plus</h3> <br>
+                <h3>Learned in She Codes Plus</h3>
+                <p>HTML, CSS, Python, Django, React</p>
              </div>
         </section>
 
         <section id="articles">
             <div class="books">
+                <div class="bookbg"></div>
                 <h2>Books I need to Read</h2>
+                <p></p>
             </div>
             <div class="tea">
+                <div class="teabg"></div>
                 <h2>Tea is always a good idea</h2>
                 <p>Tea...is a religion of the art of life - Kakuzo Okakura, The Book of Tea</p>
                 <img src="" alt="">
