images added to readme and links to linkedin

--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
                         <img src="images/noun-open-book-4873909.png" alt="book logo" class="logo">
                     </div>
             </nav>
-            <div class="socials">
-                <img src="images/icons8-linkedin-25.png" alt="linkedin logo" class="logo">
-                <img src="images/icons8-github-25.png" alt="github logo" class="logo">
-            </div>
+            <nav class="socials">
+                <img src="images/icons8-linkedin-25.png" alt="linkedin logo" class="logo1">
+                <a href="https://www.linkedin.com/in/julie-powell-a44184249"></a>
+                <img src="images/icons8-github-25.png" alt="github logo" class="logo2">
+                <a href=""></a>
+            </nav>
         </div>
         <div class="my-bio">
             <h2>Biography</h2>
