final updates to readme and photos added

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     </div>
             </nav>
             <nav class="socials">
-                <img src="images/icons8-linkedin-25.png" alt="linkedin logo" class="logo1">
-                <a href="https://www.linkedin.com/in/julie-powell-a44184249"></a>
-                <img src="images/icons8-github-25.png" alt="github logo" class="logo2">
-                <a href=""></a>
+                
+                <a href="https://www.linkedin.com/in/julie-powell-a44184249"><img src="images/icons8-linkedin-25.png" alt="linkedin logo" class="logo1"></a>
+                
+                <a href="https://github.com/thellamiechan/SheCodes-Portfolio"><img src="images/icons8-github-25.png" alt="github logo" class="logo2"></a>
             </nav>
         </div>
         <div class="my-bio">
